--- a/src/css/HeaderComponent.css
+++ b/src/css/HeaderComponent.css
@@ -1,8 +1,14 @@
 .header {
   min-height: 10vh;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  border-bottom: 1px solid #8899ab; }
+  border-bottom: 2px solid #8899ab; }
+
+.favicon {
+  height: 40px;
+  position: absolute;
+  bottom: -3px; }
