--- a/src/scss/HeaderComponent.scss
+++ b/src/scss/HeaderComponent.scss
@@ -4,11 +4,23 @@ $dark-grey: #8899ab;
   min-height: 10vh;
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   border-bottom: 2px solid $dark-grey;
+}
+
+.left-links {
+  position: absolute;
+  left: 10px;
+  bottom: 0px;
+}
+
+a {
+  font-size: 1rem;
+  font-weight: 300;
+  margin: 10px;
 }
 
 .favicon {
