--- a/src/css/HeaderComponent.css
+++ b/src/css/HeaderComponent.css
@@ -16,7 +16,8 @@
 a {
   font-size: 1rem;
   font-weight: 300;
-  margin: 10px; }
+  margin: 10px;
+  text-decoration: none; }
 
 .favicon {
   height: 40px;
