Fixed favicon path

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -6,8 +6,9 @@ body {
   font-family: 'Signika', sans-serif;
 }
 
-.text-block {
-  margin-top: 6rem;
+.block {
+  min-height: 50vh;
+  margin: 6rem 0;
 }
 
 p {
