--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -11,7 +11,12 @@ p {
 }
 
 .block {
-  min-height: 50vh;
-  margin: 6rem 0;
+  margin-top: 6rem;
 }
 
+.social-media {
+  img {
+    height: 1.5rem;
+    margin: 0rem 3rem;
+  }
+}
