--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,11 +5,30 @@ body {
   font-family: 'Signika', sans-serif; }
 
 p {
+  font-size: 2rem;
   font-weight: 300; }
 
 .block {
   margin-top: 6rem; }
 
+.intro {
+  margin: 8rem; }
+
 .social-media img {
   height: 1.5rem;
   margin: 0rem 3rem; }
+
+.paragraph {
+  margin: 12rem; }
+
+.big-picture {
+  width: 100%; }
+
+.footer {
+  margin-top: 20vh;
+  min-height: 40vh;
+  padding: 10vh;
+  color: #fff;
+  background: #8899ab; }
+  .footer p {
+    font-size: 1.5rem; }
