--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,3 +1,5 @@
+$dark-grey: #8899ab;
+
 .App {
   text-align: center;
 }
@@ -7,6 +9,7 @@ body {
 }
 
 p {
+  font-size: 2rem;
   font-weight: 300;
 }
 
@@ -14,9 +17,32 @@ p {
   margin-top: 6rem;
 }
 
+.intro {
+  margin: 8rem;
+}
+
 .social-media {
   img {
     height: 1.5rem;
     margin: 0rem 3rem;
+  }
+}
+
+.paragraph {
+  margin: 12rem;
+}
+
+.big-picture {
+  width: 100%;
+}
+
+.footer {
+  margin-top: 20vh;
+  padding: 5rem;
+  color: #fff;
+  background: $dark-grey;
+  
+  p {
+    font-size: 1.5rem;
   }
 }
