--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -10,6 +10,18 @@ $dark-grey: #8899ab;
       margin: 0rem 3rem;
     }
   }
+
+  .projects {
+    padding: 0;
+    overflow: hidden;
+  }
+
+  .project {
+    img {
+      width: 33.34vw;
+      margin-left: -10px;
+    }
+  }
   
   .paragraph {
     margin: 12rem;
