--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -1,6 +1,12 @@
+$dark-grey: #8899ab;
+
 body {
   text-align: center;
   font-family: 'Signika', sans-serif;
+}
+
+h1, h2 {
+  color: $dark-grey;
 }
 
 p {
@@ -10,4 +16,12 @@ p {
 
 .block {
   margin-top: 6rem;
+}
+
+.title {
+  font-size: 6rem;
+}
+
+.light {
+  font-weight: 300;
 }
