Added content to ux page

--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -17,3 +17,12 @@ p {
 
 .light {
   font-weight: 300; }
+
+.italic {
+  font-style: italic; }
+
+.paragraph {
+  margin: 12rem; }
+
+.big-picture {
+  width: 100%; }
