--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -25,3 +25,15 @@ p {
 .light {
   font-weight: 300;
 }
+
+.italic {
+  font-style: italic;
+}
+
+.paragraph {
+  margin: 12rem;
+}
+
+.big-picture {
+  width: 100%;
+}
