--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -1,5 +1,9 @@
 $dark-grey: #8899ab;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   text-align: center;
   font-family: 'Signika', sans-serif;
