--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -1,9 +1,9 @@
 .intro {
-  margin: 8rem; }
+  margin: 3rem; }
 
 .social-media img {
   height: 1.5rem;
-  margin: 0rem 3rem; }
+  margin: 0rem 2rem; }
 
 .projects {
   padding: 0;
@@ -20,3 +20,14 @@
   background: #8899ab; }
   .footer p {
     font-size: 1.5rem; }
+
+@media screen and (min-width: 576px) {
+  .social-media img {
+    height: 1.5rem;
+    margin: 0rem 3rem; }
+  .intro {
+    margin: 5rem; } }
+
+@media screen and (min-width: 768px) {
+  .intro {
+    margin: 8rem; } }
