--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -4,3 +4,7 @@ h1 {
 h3 {
   font-size: 2.5rem;
   margin-bottom: 4rem; }
+
+@media screen and (min-width: 576px) {
+  h1 {
+    font-size: 2.5rem; } }
