--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -8,15 +8,21 @@ body {
 h1, h2 {
   color: #8899ab; }
 
+h1 {
+  font-size: 2.5rem; }
+
 p {
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 300; }
 
 .block {
   margin-top: 6rem; }
 
+.paragraph {
+  margin: 15vw 5vw; }
+
 .title {
-  font-size: 6rem; }
+  font-size: 3.5rem; }
 
 .light {
   font-weight: 300; }
@@ -24,8 +30,19 @@ p {
 .italic {
   font-style: italic; }
 
-.paragraph {
-  margin: 12rem; }
-
 .big-picture {
   max-width: 100%; }
+
+@media screen and (min-width: 576px) {
+  .title {
+    font-size: 4rem; }
+  p {
+    font-size: 1.5rem; }
+  .paragraph {
+    margin: 15vw; } }
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 6rem; }
+  p {
+    font-size: 2rem; } }
