--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -6,3 +6,9 @@ h3 {
     font-size: 2.5rem;
     margin-bottom: 4rem;
 }
+
+@media screen and (min-width: 576px) {
+    h1 {
+      font-size: 2.5rem;
+    }
+  }
