--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -13,8 +13,12 @@ h1, h2 {
   color: $dark-grey;
 }
 
+h1 {
+  font-size: 2.5rem;
+}
+
 p {
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 300;
 }
 
@@ -22,8 +26,12 @@ p {
   margin-top: 6rem;
 }
 
+.paragraph {
+  margin: 15vw 5vw;
+}
+
 .title {
-  font-size: 6rem;
+  font-size: 3.5rem;
 }
 
 .light {
@@ -34,10 +42,27 @@ p {
   font-style: italic;
 }
 
-.paragraph {
-  margin: 12rem;
-}
-
 .big-picture {
   max-width: 100%;
+}
+
+@media screen and (min-width: 576px) {
+  .title {
+    font-size: 4rem;
+  }
+  p {
+    font-size: 1.5rem;
+  }
+  .paragraph {
+    margin: 15vw;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 6rem;
+  }
+  p {
+    font-size: 2rem;
+  }
 }
