--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -3,13 +3,13 @@ html {
 
 body {
   text-align: center;
-  font-family: 'Signika', sans-serif; }
+  font-family: 'Avenir', sans-serif; }
 
 h1, h2 {
   color: #8899ab; }
 
 h1 {
-  font-size: 2.5rem; }
+  font-size: 4.5rem; }
 
 p {
   font-size: 1.2rem;
