--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -6,7 +6,7 @@ html {
 
 body {
   text-align: center;
-  font-family: 'Signika', sans-serif;
+  font-family: 'Avenir', sans-serif;
 }
 
 h1, h2 {
@@ -14,7 +14,7 @@ h1, h2 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 4.5rem;
 }
 
 p {
