--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,7 +2,7 @@
   margin-top: 20vh;
   padding: 15vw 3vw;
   color: #fff;
-  background: #8899ab; }
+  background: #6CACAA; }
 
 .footerh2 {
   color: #fff;
@@ -13,8 +13,10 @@ p {
 
 @media screen and (min-width: 576px) {
   .footer {
-    padding: 5rem; }
-  .footerh2 {
-    font-size: 2rem; }
+    padding: 1rem; }
+  .footer-text {
+    font-size: 1rem;
+    font-weight: 700; }
   p {
-    font-size: 1.5rem; } }
+    font-size: 1.5rem;
+    margin-bottom: 0rem; } }
