--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -10,17 +10,22 @@
   overflow: hidden; }
 
 .project img {
-  width: 25vw;
-  margin-left: -10px; }
+  width: 25vw; }
 
 @media screen and (min-width: 576px) {
   .social-media img {
     height: 1.5rem;
     margin: 0rem 3rem; }
   .intro {
-    margin: 5rem; } }
+    margin: 5rem; }
+  .row {
+    margin-left: 6rem;
+    margin-right: 6rem; } }
 
 @media screen and (min-width: 768px) {
+  h1 {
+    margin-top: 9rem; }
   .intro {
     margin: 10rem;
-    margin-top: 2rem; } }
+    margin-top: 2rem;
+    margin-bottom: 2rem; } }
