--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -17,7 +17,6 @@
   .project {
     img {
       width: 25vw;
-      margin-left: -10px;
     }
   }
 
@@ -32,11 +31,21 @@
     .intro {
       margin: 5rem;
     }
+
+    .row {
+      margin-left: 6rem;
+      margin-right: 6rem;
+    }
   }
 
   @media screen and (min-width: 768px) {
+    h1 {
+      margin-top: 9rem;
+    }
+
     .intro {
       margin: 10rem;
       margin-top: 2rem;
+      margin-bottom: 2rem;
     }
   }
