Added about page and resume

--- a/src/css/HeaderComponent.css
+++ b/src/css/HeaderComponent.css
@@ -8,14 +8,14 @@
   font-size: calc(10px + 2vmin);
   border-bottom: 2px solid #8899ab; }
 
-.left-links {
+.links {
   position: absolute;
-  left: 10px;
+  right: 6rem;
   bottom: 0px; }
 
 a {
-  font-size: 1rem;
-  font-weight: 300;
+  font-size: 1.2rem;
+  font-weight: 500;
   margin: 10px;
   text-decoration: none; }
 
