Added teal accent and styled header links

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,7 +2,7 @@
   margin-top: 20vh;
   padding: 15vw 3vw;
   color: #fff;
-  background: #6CACAA; }
+  background: #448483; }
 
 .footerh2 {
   color: #fff;
