--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -1,4 +1,4 @@
-$dark-grey: #8899ab;
+$teal: #448483;
 
 html {
   scroll-behavior: smooth;
@@ -10,7 +10,7 @@ body {
 }
 
 h1, h2 {
-  color: $dark-grey;
+  color: $teal;
 }
 
 h1 {
