--- a/src/scss/HeaderComponent.scss
+++ b/src/scss/HeaderComponent.scss
@@ -1,4 +1,5 @@
-$dark-grey: #8899ab;
+$teal: #448483;
+$bright-teal: #4ADAE8;
 
 .header {
   min-height: 10vh;
@@ -8,7 +9,7 @@ $dark-grey: #8899ab;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  border-bottom: 2px solid $dark-grey;
+  border-bottom: 2px solid $teal;
 }
 
 .links {
@@ -19,10 +20,21 @@ $dark-grey: #8899ab;
 
 a {
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: 600;
   margin: 10px;
   text-decoration: none;
+  color: $teal;
 }
+
+a:hover {
+  color: $bright-teal;
+  text-decoration: none;
+}
+
+.header-link {
+  margin: 0rem 0rem 0rem 4rem;
+}
+
 
 .favicon {
   height: 40px;
