--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -11,4 +11,14 @@ h3 {
     h1 {
       font-size: 6rem;
     }
+
+    .subtitle {
+      text-align: left;
+      margin-left: 8rem;
+    }
+
+    .paragraph {
+      text-align: left;
+      margin-left: 8rem;
+    }
   }
