--- a/src/css/HeaderComponent.css
+++ b/src/css/HeaderComponent.css
@@ -6,7 +6,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  border-bottom: 2px solid #448483; }
+  border-bottom: 2px solid #448483;
+  margin-bottom: 9rem; }
 
 .links {
   position: absolute;
@@ -28,7 +29,7 @@ a:hover {
   margin: 0rem 0rem 0rem 4rem; }
 
 .favicon {
-  height: 40px;
+  height: 3rem;
   position: absolute;
-  bottom: -3px;
-  margin-left: -20px; }
+  left: 8rem;
+  margin: 0rem; }
