--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -13,19 +13,27 @@
   width: 25vw; }
 
 @media screen and (min-width: 576px) {
-  .social-media img {
-    height: 1.5rem;
-    margin: 0rem 3rem; }
+  h1 {
+    text-align: left;
+    margin-left: 8rem;
+    margin-top: 0rem; }
+  .black {
+    color: #000000; }
+  .social-media {
+    text-align: left;
+    margin-left: 8rem; }
+    .social-media img {
+      height: 1.5rem;
+      margin: 0rem 3rem 0rem 0rem; }
   .intro {
-    margin: 5rem; }
+    text-align: left;
+    margin: 5rem;
+    font-weight: 500; }
   .row {
     margin-left: 6rem;
     margin-right: 6rem; } }
 
 @media screen and (min-width: 768px) {
-  h1 {
-    margin-top: 9rem; }
   .intro {
-    margin: 10rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem; } }
+    margin: 0rem 20rem 2rem 8rem;
+    font-size: 1.5rem; } }
