--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -21,15 +21,30 @@
   }
 
   @media screen and (min-width: 576px) {
+
+    h1 {
+      text-align: left;
+      margin-left: 8rem;
+      margin-top: 0rem;
+    }
+
+    .black {
+      color: #000000;
+    }
+
     .social-media {
+      text-align: left;
+      margin-left: 8rem;
       img {
         height: 1.5rem;
-        margin: 0rem 3rem;
+        margin: 0rem 3rem 0rem 0rem;
       }
     }
     
     .intro {
+      text-align: left;
       margin: 5rem;
+      font-weight: 500;
     }
 
     .row {
@@ -39,13 +54,8 @@
   }
 
   @media screen and (min-width: 768px) {
-    h1 {
-      margin-top: 9rem;
-    }
-
     .intro {
-      margin: 10rem;
-      margin-top: 2rem;
-      margin-bottom: 2rem;
+      margin: 0rem 20rem 2rem 8rem;
+      font-size: 1.5rem;
     }
   }
