--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -32,6 +32,11 @@
       color: #000000;
     }
 
+    .text-link {
+      font-size: 1.5rem;
+      margin: 0;
+    }
+
     .social-media {
       text-align: left;
       margin-left: 8rem;
