--- a/src/css/AboutPageComponent.css
+++ b/src/css/AboutPageComponent.css
@@ -1,6 +1,3 @@
-img {
-  margin-top: 6rem; }
-
 .text {
   margin-left: 3rem; }
 
@@ -11,6 +8,8 @@ h1 {
 p {
   font-size: 1.25rem; }
 
-.text-link {
-  margin: 0;
-  margin-left: 0.3rem; }
+@media screen and (min-width: 576px) {
+  .text-link {
+    font-size: 1.25rem;
+    margin: 0;
+    margin-left: 0.3rem; } }
