--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -21,7 +21,7 @@
     color: #000000; }
   .text-link {
     font-size: 1.5rem;
-    margin: 0; }
+    margin-left: 0.3rem; }
   .social-media {
     text-align: left;
     margin-left: 8rem; }
