--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   margin-top: 20vh;
-  padding: 15vw 3vw;
+  padding: 1rem;
   color: #fff;
   background: #448483; }
 
@@ -8,15 +8,17 @@
   color: #fff;
   font-size: 1.5rem; }
 
-p {
-  font-size: 1.2rem; }
+.footer-text {
+  font-size: 1rem;
+  font-weight: 600; }
 
 @media screen and (min-width: 576px) {
-  .footer {
-    padding: 1rem; }
   .footer-text {
     font-size: 1rem;
     font-weight: 700; }
   p {
-    font-size: 1.5rem;
     margin-bottom: 0rem; } }
+
+@media screen and (min-width: 768px) {
+  .footer-text {
+    text-align: center; } }
