--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -1,5 +1,14 @@
+.title {
+  text-align: left;
+  font-size: 2rem;
+  font-weight: 800;
+  margin-left: 2rem;
+  margin-top: 0rem; }
+
 .intro {
-  margin: 3rem; }
+  margin: 0rem 2rem;
+  font-weight: 500;
+  font-size: 1.25rem; }
 
 .social-media img {
   height: 1.5rem;
@@ -9,14 +18,12 @@
   padding: 0;
   overflow: hidden; }
 
-.project img {
-  width: 25vw; }
+.project a {
+  margin: 0; }
 
 @media screen and (min-width: 576px) {
-  h1 {
-    text-align: left;
-    margin-left: 8rem;
-    margin-top: 0rem; }
+  .title {
+    font-size: 3rem; }
   .black {
     color: #000000; }
   .text-link {
@@ -24,19 +31,26 @@
     margin-left: 0.3rem; }
   .social-media {
     text-align: left;
-    margin-left: 8rem; }
+    margin-left: 2rem; }
     .social-media img {
       height: 1.5rem;
-      margin: 0rem 3rem 0rem 0rem; }
-  .intro {
-    text-align: left;
-    margin: 5rem;
-    font-weight: 500; }
-  .row {
-    margin-left: 6rem;
-    margin-right: 6rem; } }
+      margin: 0rem 3rem 0rem 0rem; } }
 
 @media screen and (min-width: 768px) {
+  .title {
+    font-size: 5rem;
+    margin-left: 8rem; }
   .intro {
     margin: 0rem 20rem 2rem 8rem;
-    font-size: 1.5rem; } }
+    font-size: 1.5rem; }
+  .social-media {
+    margin-left: 8rem; }
+    .social-media a {
+      margin: 0; }
+  .homepage-row {
+    margin-left: 8rem;
+    margin-right: 8rem; } }
+
+@media screen and (min-width: 992px) {
+  .project img {
+    width: 25vw; } }
