--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -7,18 +7,41 @@ h3 {
     margin-bottom: 4rem;
 }
 
+.case-title {
+  margin-left: 2rem;
+}
+
+.case-subtitle {
+  margin-left: 2rem;
+}
+
 @media screen and (min-width: 576px) {
     h1 {
       font-size: 6rem;
     }
 
-    .subtitle {
+    .case-subtitle {
       text-align: left;
-      margin-left: 8rem;
+      margin-left: 2rem;
     }
 
     .paragraph {
       text-align: left;
-      margin-left: 8rem;
+      margin-left: 2rem;
     }
   }
+
+@media screen and (min-width: 768px) {
+  .case-title {
+    margin-left: 8rem;
+  }
+  
+  .case-subtitle {
+    margin-left: 8rem;
+  }
+
+  .paragraph {
+    font-size: 1.2rem;
+    margin-left: 8rem;
+  }
+}
