--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -10,9 +10,24 @@
   font-weight: 500;
   font-size: 1.25rem; }
 
-.social-media img {
-  height: 1.5rem;
-  margin: 0rem 2rem; }
+.social-media {
+  margin-left: 2rem; }
+  .social-media .social-media-icon {
+    height: 1.5rem;
+    margin: 0rem 2rem 0rem 0rem; }
+
+.scroll-down {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite; }
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0); }
+  40% {
+    transform: translateY(-30px); }
+  60% {
+    transform: translateY(-15px); } }
 
 .projects {
   padding: 0;
@@ -29,19 +44,16 @@
   .text-link {
     font-size: 1.5rem;
     margin-left: 0.3rem; }
-  .social-media {
+  .social-media .social-media-icon {
     text-align: left;
-    margin-left: 2rem; }
-    .social-media img {
-      height: 1.5rem;
-      margin: 0rem 3rem 0rem 0rem; } }
+    height: 1.5rem; } }
 
 @media screen and (min-width: 768px) {
   .title {
     font-size: 5rem;
     margin-left: 8rem; }
   .intro {
-    margin: 0rem 20rem 2rem 8rem;
+    margin: 0rem 8rem 2rem 8rem;
     font-size: 1.5rem; }
   .social-media {
     margin-left: 8rem; }
@@ -52,5 +64,7 @@
     margin-right: 8rem; } }
 
 @media screen and (min-width: 992px) {
+  .intro {
+    margin: 0rem 20rem 2rem 8rem; }
   .project img {
     width: 25vw; } }
