--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -13,9 +13,28 @@
   }
   
   .social-media {
-    img {
+    margin-left: 2rem;
+    .social-media-icon {
       height: 1.5rem;
-      margin: 0rem 2rem;
+      margin: 0rem 2rem 0rem 0rem;
+    }
+  }
+
+  .scroll-down {
+    -moz-animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
     }
   }
 
@@ -46,11 +65,9 @@
     }
 
     .social-media {
-      text-align: left;
-      margin-left: 2rem;
-      img {
+      .social-media-icon {
+        text-align: left;
         height: 1.5rem;
-        margin: 0rem 3rem 0rem 0rem;
       }
     }
   }
@@ -62,7 +79,7 @@
     }
 
     .intro {
-      margin: 0rem 20rem 2rem 8rem;
+      margin: 0rem 8rem 2rem 8rem;
       font-size: 1.5rem;
     }
 
@@ -81,6 +98,10 @@
   }
 
   @media screen and (min-width: 992px) {
+    .intro {
+      margin: 0rem 20rem 2rem 8rem;
+    }
+
     .project {
       img {
         width: 25vw;
