--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -15,6 +15,10 @@ h3 {
   margin-left: 2rem;
 }
 
+.phone {
+  height: 40rem;
+}
+
 @media screen and (min-width: 576px) {
     h1 {
       font-size: 6rem;
@@ -28,6 +32,8 @@ h3 {
     .paragraph {
       text-align: left;
       margin-left: 2rem;
+      margin-right: 2rem;
+      margin-bottom: 3rem;
     }
   }
 
@@ -43,5 +49,6 @@ h3 {
   .paragraph {
     font-size: 1.2rem;
     margin-left: 8rem;
+    margin-right: 8rem;
   }
 }
