--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -61,10 +61,9 @@
       margin: 0; }
   .homepage-row {
     margin-left: 8rem;
-    margin-right: 8rem; } }
+    margin-right: 8rem;
+    margin-bottom: 1rem; } }
 
 @media screen and (min-width: 992px) {
   .intro {
-    margin: 0rem 20rem 2rem 8rem; }
-  .project img {
-    width: 25vw; } }
+    margin: 0rem 20rem 2rem 8rem; } }
