--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -94,17 +94,12 @@
     .homepage-row {
       margin-left: 8rem;
       margin-right: 8rem;
+      margin-bottom: 1rem;
     }
   }
 
   @media screen and (min-width: 992px) {
     .intro {
       margin: 0rem 20rem 2rem 8rem;
-    }
-
-    .project {
-      img {
-        width: 25vw;
-      }
     }
   }
