--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -1,15 +1,18 @@
 h1 {
   font-size: 3rem; }
 
-h3 {
+.subtitle {
   font-size: 2.5rem;
-  margin-bottom: 4rem; }
+  margin-top: 6rem;
+  margin-bottom: 2rem; }
 
 .case-title {
-  margin-left: 2rem; }
+  margin-left: 2rem;
+  margin-right: 2rem; }
 
 .case-subtitle {
-  margin-left: 2rem; }
+  margin-left: 2rem;
+  margin-right: 2rem; }
 
 .phone {
   height: 40rem; }
@@ -19,18 +22,19 @@ h3 {
     font-size: 6rem; }
   .case-subtitle {
     text-align: left;
-    margin-left: 2rem; }
+    margin-left: 2rem;
+    margin-right: 2rem; }
   .paragraph {
     text-align: left;
-    margin-left: 2rem;
-    margin-right: 2rem;
     margin-bottom: 3rem; } }
 
 @media screen and (min-width: 768px) {
   .case-title {
-    margin-left: 8rem; }
+    margin-left: 8rem;
+    margin-right: 8rem; }
   .case-subtitle {
-    margin-left: 8rem; }
+    margin-left: 8rem;
+    margin-right: 8rem; }
   .paragraph {
     font-size: 1.2rem;
     margin-left: 8rem;
