--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -16,7 +16,7 @@ h1 {
   margin-top: 2rem; }
 
 .paragraph {
-  margin: 15vw 5vw; }
+  margin: 5vw; }
 
 .title {
   font-size: 3.5rem; }
@@ -35,9 +35,7 @@ h1 {
 
 @media screen and (min-width: 576px) {
   .title {
-    font-size: 4rem; }
-  .paragraph {
-    margin: 15vw; } }
+    font-size: 4rem; } }
 
 @media screen and (min-width: 768px) {
   .title {
