--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -36,6 +36,9 @@
 .project a {
   margin: 0; }
 
+.popup-content {
+  text-align: center; }
+
 @media screen and (min-width: 576px) {
   .title {
     font-size: 3rem; }
