--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -2,17 +2,20 @@ h1 {
     font-size: 3rem;
 }
 
-h3 {
+.subtitle { // used for subtitles within case study
     font-size: 2.5rem;
-    margin-bottom: 4rem;
+    margin-top: 6rem;
+    margin-bottom: 2rem;
 }
 
 .case-title {
   margin-left: 2rem;
+  margin-right: 2rem;
 }
 
-.case-subtitle {
+.case-subtitle { // used for case study title
   margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .phone {
@@ -27,12 +30,11 @@ h3 {
     .case-subtitle {
       text-align: left;
       margin-left: 2rem;
+      margin-right: 2rem;
     }
 
     .paragraph {
       text-align: left;
-      margin-left: 2rem;
-      margin-right: 2rem;
       margin-bottom: 3rem;
     }
   }
@@ -40,10 +42,12 @@ h3 {
 @media screen and (min-width: 768px) {
   .case-title {
     margin-left: 8rem;
+    margin-right: 8rem;
   }
   
   .case-subtitle {
     margin-left: 8rem;
+    margin-right: 8rem;
   }
 
   .paragraph {
