--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -10,6 +10,10 @@
   font-weight: 500;
   font-size: 1.25rem; }
 
+.text-link {
+  font-size: 1.25rem;
+  margin-left: 0.3rem; }
+
 .social-media {
   margin-left: 2rem; }
   .social-media .social-media-icon {
@@ -44,9 +48,6 @@
     font-size: 3rem; }
   .black {
     color: #000000; }
-  .text-link {
-    font-size: 1.5rem;
-    margin-left: 0.3rem; }
   .social-media .social-media-icon {
     text-align: left;
     height: 1.5rem; } }
@@ -57,6 +58,8 @@
     margin-left: 8rem; }
   .intro {
     margin: 0rem 8rem 2rem 8rem;
+    font-size: 1.5rem; }
+  .text-link {
     font-size: 1.5rem; }
   .social-media {
     margin-left: 8rem; }
