--- a/src/scss/AboutPageComponent.scss
+++ b/src/scss/AboutPageComponent.scss
@@ -10,18 +10,17 @@
 .text {
   margin: 0;
   font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.text-link-about {
+  font-size: 1.25rem;
 }
 
 @media screen and (min-width: 576px) {
 
   .about-title {
     font-size: 4rem;
-  }
-
-  .text-link {
-    font-size: 1.25rem;
-    margin: 0;
-    margin-left: 0.3rem;
   }
 }
 
@@ -37,5 +36,9 @@
   .text {
     margin-left: 3rem;
     font-size: 1.25;
+  }
+
+  .text-link-about {
+    font-size: 1.25rem;
   }
 }
