--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -6,35 +6,19 @@ h1 {
   margin-top: 6rem;
   margin-bottom: 2rem; }
 
-.case-title {
-  margin-left: 2rem;
-  margin-right: 2rem; }
-
-.case-subtitle {
-  margin-left: 2rem;
-  margin-right: 2rem; }
-
 .phone {
   height: 40rem; }
 
 @media screen and (min-width: 576px) {
   h1 {
-    font-size: 6rem; }
+    font-size: 4rem; }
   .case-subtitle {
-    text-align: left;
-    margin-left: 2rem;
-    margin-right: 2rem; }
+    text-align: left; }
   .paragraph {
     text-align: left;
     margin-bottom: 3rem; } }
 
 @media screen and (min-width: 768px) {
-  .case-title {
-    margin-left: 8rem;
-    margin-right: 8rem; }
-  .case-subtitle {
-    margin-left: 8rem;
-    margin-right: 8rem; }
   .paragraph {
     font-size: 1.2rem;
     margin-left: 8rem;
