--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -63,6 +63,15 @@
 
     .title {
       font-size: 3rem;
+      margin-left: 0rem;
+    }
+
+    .intro {
+      margin-left: 0rem;
+    }
+
+    .social-media {
+      margin-left: 0rem;
     }
 
     .black {
