--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -59,13 +59,21 @@
     height: 1.5rem; } }
 
 @media screen and (min-width: 768px) {
+  .intro-section {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto; }
   .title {
     font-size: 3rem; }
   .intro {
-    font-size: 1.5rem; }
+    font-size: 1.3rem; }
   .text-link {
-    font-size: 1.5rem; }
+    font-size: 1.3rem; }
   .social-media a {
     margin: 0; }
   .homepage-row {
     margin-bottom: 1rem; } }
+
+@media screen and (min-width: 1300px) {
+  .intro-section {
+    width: 100%; } }
