--- a/src/css/AboutPageComponent.css
+++ b/src/css/AboutPageComponent.css
@@ -5,7 +5,7 @@
   font-size: 3rem;
   margin: 2rem 0rem 1rem 0rem; }
 
-.text {
+.about-text {
   margin: 0;
   font-size: 1.25rem;
   font-weight: 500; }
@@ -15,16 +15,19 @@
 
 @media screen and (min-width: 576px) {
   .about-title {
-    font-size: 4rem; } }
+    font-size: 4rem; }
+  .about-text {
+    margin-left: 0rem; } }
 
 @media screen and (min-width: 768px) {
-  .about-row {
-    margin-left: 6rem;
-    margin-right: 6rem; }
-  .about-title {
-    margin: 2rem 0rem 1rem 3rem; }
   .text {
     margin-left: 3rem;
     font-size: 1.25; }
   .text-link-about {
     font-size: 1.25rem; } }
+
+@media screen and (min-width: 992px) {
+  .about-text {
+    margin: 2rem 0rem 1rem 3rem; }
+  .about-title {
+    margin: 2rem 0rem 1rem 3rem; } }
