--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,21 +1,15 @@
 .footer {
-  margin-top: 20vh;
-  padding: 1rem;
-  color: #fff;
-  background: #448483; }
+  color: #3E3E3E;
+  font-size: 0.65rem; }
 
-.footerh2 {
-  color: #fff;
-  font-size: 1.5rem; }
-
-.footer-text {
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 600; }
+.footer-link {
+  padding-left: 3rem; }
 
 @media screen and (min-width: 576px) {
-  .footer-text {
-    font-size: 1rem;
-    font-weight: 700; }
-  p {
-    margin-bottom: 0rem; } }
+  .footer {
+    padding: 4vh 0 16vh 0;
+    font-size: 1rem; } }
+
+@media screen and (min-width: 768px) {
+  .footer {
+    padding: 4vh 0 16vh 0; } }
