--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -1,30 +1,25 @@
 .title {
   text-align: left;
   font-size: 2rem;
-  font-weight: 800;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 0rem; }
+  font-weight: 800; }
 
-.intro {
-  margin: 0rem 2rem;
+.text {
+  margin: 2rem 0rem;
   font-weight: 500;
   font-size: 1.25rem; }
 
 .text-link {
-  font-size: 1.25rem;
-  margin-left: 0.3rem; }
-
-.social-media {
-  margin-left: 2rem; }
-  .social-media .social-media-icon {
-    height: 1.5rem;
-    margin: 0rem 2rem 0rem 0rem; }
+  margin-left: 0.3rem;
+  color: #4305F2;
+  font-weight: 600; }
 
 .scroll-down {
   -moz-animation: bounce 2s infinite;
   -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite; }
+  animation: bounce 2s infinite;
+  height: 2rem;
+  margin: 2rem 0rem;
+  cursor: pointer; }
 
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
@@ -44,36 +39,30 @@
 .popup-content {
   text-align: center; }
 
+.outro {
+  margin-top: 6rem; }
+
 @media screen and (min-width: 576px) {
+  .text-section {
+    padding: 0; }
   .title {
     font-size: 3rem;
     margin-left: 0rem; }
-  .intro {
+  .text {
     margin-left: 0rem; }
-  .social-media {
+  .scroll-down {
     margin-left: 0rem; }
   .black {
-    color: #000000; }
-  .social-media .social-media-icon {
-    text-align: left;
-    height: 1.5rem; } }
+    color: #000000; } }
 
 @media screen and (min-width: 768px) {
-  .intro-section {
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto; }
   .title {
     font-size: 3rem; }
-  .intro {
+  .text {
     font-size: 1.3rem; }
-  .text-link {
-    font-size: 1.3rem; }
-  .social-media a {
-    margin: 0; }
   .homepage-row {
     margin-bottom: 1rem; } }
 
 @media screen and (min-width: 1300px) {
-  .intro-section {
+  .text-section {
     width: 100%; } }
