--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -1,35 +1,43 @@
+$blue: #4305F2;
+
 .title {
   text-align: left;
   font-size: 2rem;
   font-weight: 800;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 0rem;
+  // margin-left: 2rem;
+  // margin-right: 2rem;
+  // margin-top: 0rem;
+  //margin: 0rem 2rem 0rem 2rem;
 }
 
-.intro {
-    margin: 0rem 2rem;
+.text {
+    margin: 2rem 0rem;
     font-weight: 500;
     font-size: 1.25rem;
   }
 
 .text-link {
-  font-size: 1.25rem;
+  //font-size: 1.25rem;
   margin-left: 0.3rem;
+  color: $blue;
+  font-weight: 600;
  }
   
-  .social-media {
-    margin-left: 2rem;
-    .social-media-icon {
-      height: 1.5rem;
-      margin: 0rem 2rem 0rem 0rem;
-    }
-  }
+  // .social-media {
+  //   margin-left: 2rem;
+  //   .social-media-icon {
+  //     height: 1.5rem;
+  //     margin: 0rem 2rem 0rem 0rem;
+  //   }
+  // }
 
   .scroll-down {
     -moz-animation: bounce 2s infinite;
     -webkit-animation: bounce 2s infinite;
     animation: bounce 2s infinite;
+    height: 2rem;
+    margin: 2rem 0rem;
+    cursor: pointer;
   }
   
   @keyframes bounce {
@@ -59,18 +67,27 @@
     text-align: center;
   }
 
+  .outro {
+    margin-top: 6rem;
+  }
+
   @media screen and (min-width: 576px) {
+
+    .text-section {
+      padding: 0;
+    }
 
     .title {
       font-size: 3rem;
       margin-left: 0rem;
     }
 
-    .intro {
+    .text {
       margin-left: 0rem;
+      //width: 100%;
     }
 
-    .social-media {
+    .scroll-down {
       margin-left: 0rem;
     }
 
@@ -78,39 +95,40 @@
       color: #000000;
     }
 
-    .social-media {
-      .social-media-icon {
-        text-align: left;
-        height: 1.5rem;
-      }
-    }
+    // .social-media {
+    //   .social-media-icon {
+    //     text-align: left;
+    //     height: 1.5rem;
+    //   }
+    // }
   }
 
   @media screen and (min-width: 768px) {
-    .intro-section {
-      width: 85%;
-      margin-left: auto;
-      margin-right: auto;
-    }
 
     .title {
       font-size: 3rem;
+      //margin: 0rem 2rem 0rem 2rem;
     }
 
-    .intro {
+    .text {
       font-size: 1.3rem;
+      //margin: 2rem 2rem;
     }
 
-    .text-link {
-      font-size: 1.3rem;
+    .scroll-down{
+       //margin: 2rem 2rem;
     }
 
-    .social-media {
+    // .text-link {
+    //   //font-size: 1.3rem;
+    // }
 
-      a {
-        margin: 0;
-      }
-    }
+    // .social-media {
+
+    //   a {
+    //     margin: 0;
+    //   }
+    // }
 
     .homepage-row {
       margin-bottom: 1rem;
@@ -118,7 +136,7 @@
   }
 
   @media screen and (min-width: 1300px) {
-    .intro-section {
+    .text-section {
       width: 100%;
     }
   }
