--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -1,4 +1,6 @@
 $dark-grey: #3E3E3E;
+$grey: #545454;
+$blue: #4305F2;
 
 html {
   scroll-behavior: smooth;
@@ -18,6 +20,10 @@ h1 {
   margin-top: 0rem;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .block {
   margin-top: 2rem;
 }
@@ -28,6 +34,16 @@ h1 {
 
 .title {
   font-size: 3.5rem;
+}
+
+.link {
+  font-weight: 500;
+  text-decoration: none;
+  color: $grey;
+}
+
+.link:hover {
+  color: $blue;
 }
 
 .black {
