Added Slack case study, reorganized styling files

--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -3,23 +3,14 @@ html {
 
 body {
   text-align: left;
-  font-family: 'Avenir', sans-serif; }
-
-h1, h2 {
+  font-family: 'Avenir', sans-serif;
   color: #3E3E3E; }
 
-h1 {
-  font-size: 4rem;
-  margin-top: 0rem; }
+p {
+  font-weight: 450; }
 
 a:hover {
   text-decoration: none; }
-
-.block {
-  margin-top: 2rem; }
-
-.paragraph {
-  margin: 5vw; }
 
 .title {
   font-size: 3.5rem; }
@@ -32,6 +23,11 @@ a:hover {
 .link:hover {
   color: #4305F2; }
 
+.text-link {
+  margin-left: 0.3rem;
+  color: #4305F2;
+  font-weight: 600; }
+
 .black {
   color: #000000; }
 
@@ -41,8 +37,20 @@ a:hover {
 .italic {
   font-style: italic; }
 
-.big-picture {
-  max-width: 100%; }
+.container-hero {
+  padding: 0; }
+
+.hero {
+  max-width: 100%;
+  padding: 0; }
+
+.arrow {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+  height: 2rem;
+  margin: 2rem 0rem;
+  cursor: pointer; }
 
 @media screen and (min-width: 576px) {
   .title {
@@ -50,6 +58,4 @@ a:hover {
 
 @media screen and (min-width: 768px) {
   .title {
-    font-size: 3rem; }
-  .block {
-    margin-top: 6rem; } }
+    font-size: 3rem; } }
