--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -8,19 +8,6 @@
   font-weight: 500;
   font-size: 1.25rem; }
 
-.text-link {
-  margin-left: 0.3rem;
-  color: #4305F2;
-  font-weight: 600; }
-
-.scroll-down {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
-  height: 2rem;
-  margin: 2rem 0rem;
-  cursor: pointer; }
-
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0); }
@@ -43,6 +30,8 @@
   margin-top: 6rem; }
 
 @media screen and (min-width: 576px) {
+  .intro {
+    margin: 6rem 0 2rem 0; }
   .text-section {
     padding: 0; }
   .title {
@@ -56,6 +45,8 @@
     color: #000000; } }
 
 @media screen and (min-width: 768px) {
+  .intro {
+    margin: 8rem 0 2rem 0; }
   .title {
     font-size: 3rem; }
   .text {
@@ -64,5 +55,7 @@
     margin-bottom: 1rem; } }
 
 @media screen and (min-width: 1300px) {
+  .intro {
+    margin: 10rem 0 4rem 0; }
   .text-section {
     width: 100%; } }
