Added LCBO and EA pages

--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -19,6 +19,7 @@
 
     .content {
       margin: 4rem auto 4rem auto;
+      padding: 0;
     }
 
     .block {
@@ -45,7 +46,7 @@
   .block-title {
     margin-bottom: 1.25rem;
   }
-  
+
 }
 
 @media screen and (min-width: 1300px) {
