--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -13,7 +13,8 @@
 
 @media screen and (min-width: 576px) {
   .content {
-    margin: 4rem auto 4rem auto; }
+    margin: 4rem auto 4rem auto;
+    padding: 0; }
   .block {
     margin-top: 4rem; }
   .block-title {
