--- a/src/css/HomepageComponent.css
+++ b/src/css/HomepageComponent.css
@@ -41,8 +41,8 @@
     margin-left: 0rem; }
   .scroll-down {
     margin-left: 0rem; }
-  .black {
-    color: #000000; } }
+  .outro {
+    margin-top: 8rem; } }
 
 @media screen and (min-width: 768px) {
   .intro {
@@ -52,7 +52,9 @@
   .text {
     font-size: 1.3rem; }
   .homepage-row {
-    margin-bottom: 1rem; } }
+    margin-bottom: 1rem; }
+  .outro {
+    margin-top: 10rem; } }
 
 @media screen and (min-width: 1300px) {
   .intro {
