--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -3,7 +3,7 @@
   font-size: 0.65rem; }
 
 .footer-link {
-  padding-left: 3rem; }
+  margin-left: 3rem; }
 
 @media screen and (min-width: 576px) {
   .footer {
