--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -53,9 +53,21 @@ a:hover {
   cursor: pointer; }
 
 @media screen and (min-width: 576px) {
+  .intro {
+    margin: 8rem 0 2rem 0; }
   .title {
-    font-size: 4rem; } }
+    font-size: 4rem; }
+  .text-section {
+    padding: 0; } }
 
 @media screen and (min-width: 768px) {
+  .intro {
+    margin: 8rem 0 2rem 0; }
   .title {
     font-size: 3rem; } }
+
+@media screen and (min-width: 1300px) {
+  .intro {
+    margin: 10rem 0 4rem 0; }
+  .text-section {
+    width: 100%; } }
