--- a/src/css/HeaderComponent.css
+++ b/src/css/HeaderComponent.css
@@ -15,7 +15,7 @@
 
 .header-link {
   margin: 0rem 0rem 0rem 1rem;
-  font-size: 1.2rem; }
+  font-size: 1rem; }
 
 .active-link {
   font-weight: 600;
@@ -27,10 +27,15 @@
   left: 2rem;
   margin: 0rem; }
 
+@media screen and (min-width: 576px) {
+  .header-link {
+    margin: 0rem 0rem 0rem 2rem; } }
+
 @media screen and (min-width: 768px) {
   .header {
     margin-bottom: 2rem; }
   .favicon {
     left: 8rem; }
   .header-link {
+    font-size: 1.3rem;
     margin: 0rem 0rem 0rem 4rem; } }
