--- a/src/scss/HeaderComponent.scss
+++ b/src/scss/HeaderComponent.scss
@@ -21,7 +21,7 @@ $blue: #4305F2;
 
 .header-link {
   margin: 0rem 0rem 0rem 1rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .active-link {
@@ -37,7 +37,14 @@ $blue: #4305F2;
   margin: 0rem;
 }
 
+@media screen and (min-width: 576px) {
+  .header-link {
+    margin: 0rem 0rem 0rem 2rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
+
   .header {
     margin-bottom: 2rem;
   }
@@ -47,6 +54,8 @@ $blue: #4305F2;
   }
 
   .header-link {
+    font-size: 1.3rem;
     margin: 0rem 0rem 0rem 4rem;
   }
+
 }
