Centered case study content and updated Slack assets

--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -10,8 +10,7 @@ p {
   font-weight: 450; }
 
 a:hover {
-  text-decoration: none;
-  color: #4305f2; }
+  text-decoration: none; }
 
 .title {
   font-size: 3.5rem; }
