--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -1,15 +1,34 @@
 .content {
   margin: 2rem auto 4rem auto; }
 
+.case-study-title {
+  max-width: 667px;
+  margin-left: auto;
+  margin-right: auto; }
+
 .block {
   margin-top: 2rem; }
 
-.block-text {
-  max-width: 667px; }
+.center-with-margins {
+  max-width: 667px;
+  margin-left: auto;
+  margin-right: auto; }
 
 .block-title {
   font-size: 1.6rem;
-  font-weight: 600; }
+  font-weight: 600;
+  max-width: 667px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.case-study-img {
+  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+.case-study-footer {
+  text-align: center; }
 
 @media screen and (min-width: 576px) {
   .content {
