--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -2,17 +2,39 @@
   margin: 2rem auto 4rem auto;
 }
 
+.case-study-title {
+  max-width: 667px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .block {
   margin-top: 2rem;
 }
 
-.block-text {
+.center-with-margins {
   max-width: 667px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .block-title { // used for subtitles within case study
     font-size: 1.6rem;
     font-weight: 600;
+    max-width: 667px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.case-study-img {
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.case-study-footer {
+  text-align: center;
 }
 
 @media screen and (min-width: 576px) {
