--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -7,19 +7,29 @@
   margin-right: auto; }
 
 .block {
-  margin-top: 2rem; }
+  margin-top: 2rem;
+  margin-bottom: 6rem; }
 
 .center-with-margins {
   max-width: 667px;
   margin-left: auto;
   margin-right: auto; }
 
-.block-title {
-  font-size: 1.6rem;
+.text-large {
+  font-size: 1.4rem;
   font-weight: 600;
   max-width: 667px;
   margin-left: auto;
   margin-right: auto; }
+
+.slack-highlight {
+  background-color: #FEDCFF; }
+
+.lcbo-highlight {
+  background-color: #CCF0DD; }
+
+.ea-highlight {
+  background-color: #FFDADA; }
 
 .case-study-img {
   max-width: 100%;
@@ -36,22 +46,18 @@
     padding: 0; }
   .block {
     margin-top: 4rem; }
-  .block-title {
-    font-size: 2rem;
-    margin-bottom: 1rem; } }
+  .text-large {
+    font-size: 2rem; } }
 
 @media screen and (min-width: 768px) {
   .content {
     margin: 6rem auto 6rem auto; }
   .block {
-    margin-top: 5rem; }
-  .block-title {
-    margin-bottom: 1.25rem; } }
+    margin-top: 5rem; } }
 
 @media screen and (min-width: 1300px) {
   .content {
     margin: 8rem auto 6rem auto; }
   .block {
-    margin-top: 6rem; }
-  .block-title {
-    margin-bottom: 2rem; } }
+    margin-top: 6rem;
+    margin-bottom: 8rem; } }
