Added Framer Motion so images expand when clicked, also reduced resume file size

--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -50,6 +50,19 @@ $ea-highlight: #FFDADA;
     margin-right: auto;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
+.frame {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+}
+
 .case-study-footer {
   text-align: center;
 }
