--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -37,6 +37,17 @@
   margin-left: auto;
   margin-right: auto; }
 
+.clickable {
+  cursor: pointer; }
+
+.frame {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white; }
+
 .case-study-footer {
   text-align: center; }
 
