--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -29,7 +29,7 @@
   background-color: #CCF0DD; }
 
 .ea-highlight {
-  background-color: #FFDADA; }
+  background-color: #FFDFCD; }
 
 .case-study-img {
   max-width: 100%;
