--- a/src/scss/CaseStudy.scss
+++ b/src/scss/CaseStudy.scss
@@ -1,6 +1,6 @@
 $slack-highlight: #FEDCFF;
 $lcbo-highlight: #CCF0DD;
-$ea-highlight: #FFDADA;
+$ea-highlight: #FFDFCD;
 
 .content {
   margin: 2rem auto 4rem auto;
