--- a/src/scss/AboutPageComponent.scss
+++ b/src/scss/AboutPageComponent.scss
@@ -3,6 +3,8 @@
 }
 
 .about-title {
+    font-family: "neue-machina", sans-serif;
+    font-weight: 800;
     font-size: 3rem;
     margin: 2rem 0rem 1rem 0rem;
   }
@@ -20,7 +22,7 @@
 @media screen and (min-width: 576px) {
 
   .about-title {
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
   
   .about-text {
