--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -31,11 +31,22 @@
 .ea-highlight {
   background-color: #FFDFCD; }
 
+.ap-highlight {
+  background-color: #FFBDDE; }
+
 .case-study-img {
   max-width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto; }
+
+.black-box {
+  border: 4px solid black; }
+
+.black-box:hover {
+  box-shadow: 8px 8px black;
+  transform: translate(-8px, -8px);
+  transition-duration: 0.5s; }
 
 .clickable {
   cursor: pointer; }
