--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -22,6 +22,9 @@ a:hover {
   font-family: "neue-machina", sans-serif;
   font-size: 3.5rem; }
 
+.mono-header {
+  font-family: "neue-machina", sans-serif; }
+
 .link {
   font-weight: 500;
   text-decoration: none;
