--- a/src/scss/Global.scss
+++ b/src/scss/Global.scss
@@ -43,6 +43,10 @@ a:hover {
   font-size: 3.5rem;
 }
 
+.mono-header { // not currently used, for replacing default mono with machina
+  font-family: "neue-machina", sans-serif;
+}
+
 .link {
   font-weight: 500;
   text-decoration: none;
