Completed Coda post

--- a/src/css/CaseStudy.css
+++ b/src/css/CaseStudy.css
@@ -34,6 +34,9 @@
 .ap-highlight {
   background-color: #FFBDDE; }
 
+.coda-highlight {
+  background-color: #FFD2B8; }
+
 .case-study-img {
   max-width: 100%;
   display: block;
